# shield

./: .gitignore  MANIFEST.in  README.md  exe_dev.py  lettuce.py  main.py  pyproject.toml  requirements.txt  requirements_lock.txt  setup.cfg  setup.py  test_hallucination_comprehensive.py  test_hallucination_detector.py
core/: __init__.py  shield.py  utils.py  vault.py
core/input_detectors/: __init__.py  anonymize.py  coding_language.py  deidentifier.py  dos_tokens.py  harmful.py  language.py  malware_url.py  prompt_injections.py  regex.py  secrets.py  stop_input_substrings.py  text_quality.py  toxicity.py
core/output_detectors/: base_detector.py  bias.py  coding_language.py  contradictions.py  deanonymize.py  factual_consistency.py  hallucinations.py  harmful.py  language.py  malware_url.py  reidentify.py  sensitive_pii.py  stop_output_substrings.py  temporal.py  text_quality.py  toxicity.py
core/output_detectors/equity/: __init__.py  equity-metallama.py  equity.py
core/output_detectors/relevance/: base_relevance.py
examples/: DeepSeek_1_5B_FinQA_Reasoner.ipynb  deepseek_1_5b_finqa_reasoner.py
fred/: README.md
pegasi_shield/: __init__.py  openai_wrapper.py  shield.py
pegasi_shield/core/: __init__.py  engine.py  keys.py  utils.py
pegasi_shield/core/input_detectors/: anonymize.py  coding_language.py  deidentifier.py  dos_tokens.py  harmful.py  language.py  malware_url.py  prompt_injections.py  regex.py  secrets.py  stop_input_substrings.py  text_quality.py  toxicity.py
pegasi_shield/core/output_detectors/: __init__.py  bias.py  coding_language.py  contradictions.py  deanonymize.py  factual_consistency.py  groundedness.py  hallucinations.py  harmful.py  language.py  malware_url.py  regex.py  reidentify.py  sensitive_pii.py  stop_output_substrings.py  temporal.py  text_quality.py  toxicity.py
pegasi_shield/core/patterns/: sensitive_patterns.json
pegasi_shield/input_detectors/: base_detector.py
pegasi_shield/output_detectors/: __init__.py  bias.py  hallucinations.py  toxicity.py
vnv/: pyvenv.cfg
(+7 files in other folders)
