[command]
option = value

[metadata]
name = pegasi-shield
version = 0.0.21
author = Kevin Wu
author_email = kevin@usepegasi.com
description = Protect AI agents and GenAI apps with confidence
long_description = file: README.md
long_description_content_type = text/markdown
url = http://www.usepegasi.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
